[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["prettystack"]

[project]
name = "prettystack"
authors = [
    {name = "Colm O'Connor", email = "colm.oconnor.github@gmail.com"},
]
description = "Output pretty stack traces."
license = {text = "MIT"}
requires-python = ">=3.7.0"
keywords = ["stacktrace"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: English",
]
dependencies = [
    "colorama",
    "jinja2",
    "path.py",
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://hitchdev.com/prettystack"
documentation = "https://hitchdev.com/prettystack/using"
repository = "https://github.com/crdoconnor/prettystack"
changelog = "https://hitchdev.com/prettystack/changelog"

[tool.setuptools.dynamic]
readme = {file = ["README.md",], content-type = "text/markdown"}
version = {file = "VERSION"}
